Bug 1230784 - Don't copy SurfaceTexture contents when presenting video on Android r=esawin,jya a=ritu

--HG--
extra : commitid : CVFTG2l7Jer
extra : source : 6e4e4e058354217e800a686d61b0c30bfcfe6999